[package]
name = "azure-nvme-id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.149"
nix = { version = "0.27.1", features = ["fs", "ioctl"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[[bin]]
name = "azure-nvme-id"
path = "main.rs"

